<resources xmlns:tools="http://schemas.android.com/tools">
  <string name="app_name">Store-Management</string>
  <string name="setting">تنظیمات</string>
  <string name="about_us">درباره ما</string>
  <string name="version">ورژن برنامه</string>
  <string name="exit">خروج</string>
  <string name="username">نام کاربری</string>
  <string name="password">رمز عبور</string>
  <string name="userCode">کد کاربر</string>
  <string name="save">ذخیره</string>
  <string name="error_unknown_system_exception">خطای سیستمی ناشناس</string>
  <string name="message_setting_saved_successfully">اطلاعات تنظیمات با موفقیت ذخیره شد</string>
  <string name="message_please_wait">لطفا صبر کنید</string>
  <string name="com.parsroyal.solutiontablet.exception.InvalidServerAddressException" tools:ignore="ExtraTranslation">مقدار آدرس سرور معتبر نمی باشد</string>
  <string name="com.parsroyal.solutiontablet.exception.UsernameNotProvidedForConnectingToServerException" tools:ignore="ExtraTranslation">نام کاربری برای اتصال به سرور یافت نشد.</string>
  <string name="com.parsroyal.solutiontablet.exception.PasswordNotProvidedForConnectingToServerException" tools:ignore="ExtraTranslation">رمز عبور برای اتصال به سرور یافت نشد.</string>
  <string name="com.parsroyal.solutiontablet.exception.InvalidUserCodeException" tools:ignore="ExtraTranslation">کد کاربر معتبر نمی باشد.</string>
  <string name="com.parsroyal.solutiontablet.exception.UnknownSystemException" tools:ignore="ExtraTranslation">خطای سیستمی ناشناس</string>
  <string name="com.parsroyal.solutiontablet.exception.GotNoResponseFromBackendException" tools:ignore="ExtraTranslation">هیچ پاسخی از سرور دریافت نشد</string>
  <string name="com.parsroyal.solutiontablet.exception.InvalidResponseFromBackendException" tools:ignore="ExtraTranslation">پاسخ دریافتی از سرور معتبر نمی باشد.</string>
  <string name="com.parsroyal.solutiontablet.exception.BackendIsNotReachableException" tools:ignore="ExtraTranslation">سرور با آدرس های وارد شده، قابل دسترسی نیست.</string>
  <string name="com.parsroyal.solutiontablet.exception.TimeOutException" tools:ignore="ExtraTranslation">عدم دریافت پاسخ از سرور در زمان مناسب</string>
  <string name="com.parsroyal.solutiontablet.exception.UserNotFoundException" tools:ignore="ExtraTranslation">کاربر مورد نظر یافت نشد.</string>
  <string name="com.parsroyal.solutiontablet.exception.BackendInternalException" tools:ignore="ExtraTranslation">خطا در سرور</string>
  <string name="com.parsroyal.solutiontablet.exception.InternalServerError" tools:ignore="ExtraTranslation">خطا در سرور</string>
  <string name="com.parsroyal.solutiontablet.exception.URLNotFoundException" tools:ignore="ExtraTranslation">آدرس مورد نظر یافت نشد.</string>
  <string name="com.parsroyal.solutiontablet.exception.GPSIsNotEnabledException" tools:ignore="ExtraTranslation">GPS فعال نیست.</string>
  <string name="com.parsroyal.solutiontablet.exception.DataNotAvailableException" tools:ignore="ExtraTranslation">دیتا موجود نیست</string>
  <string name="com.parsroyal.solutiontablet.exception.SalesmanIdNotProvidedForConnectingToServerException" tools:ignore="ExtraTranslation">سریال بازاریاب برای ارسال به سرور یافت نشد.</string>
  <string name="com.parsroyal.solutiontablet.exception.SaleOrderNotFoundException" tools:ignore="ExtraTranslation">سفارش مورد نظر یافت نشد.</string>
  <string name="com.parsroyal.solutiontablet.exception.SaleOrderItemCountExceedExistingException" tools:ignore="ExtraTranslation">تعداد یا مقدار وارد شده بیش از موجودی می باشد</string>
  <string name="exceed_count_exception">تعداد یا مقدار وارد شده بیش از موجودی می باشد</string>
  <string name="com.parsroyal.solutiontablet.exception.UserNotAuthorizedException" tools:ignore="ExtraTranslation">نام کاربری یا رمز عبور اشتباه است</string>
  <string name="send_data">ارسال اطلاعات</string>
  <string name="send_visit_data">ارسال اطلاعات بازدید</string>
  <string name="get_data">دریافت اطلاعات</string>
  <string name="message_downloading_data_please_wait">درحال دریافت اطلاعات…</string>
  <string name="data_transfer">انتقال اطلاعات</string>
  <string name="message_transferring_provinces_data">در حال انتقال اطلاعات استان ها…</string>
  <string name="message_transferring_goods_images_data">در حال دریافت عکس کالاها…</string>
  <string name="message_error_transferring_goods_images_data">خطا در دریافت عکس کالا</string>
  <string name="provinces_data_transferred_successfully">اطلاعات استان ها با موفقیت دریافت شد.</string>
  <string name="goods_images_data_transferred_successfully">عکس کالاها با موفقیت دریافت شد.</string>
  <string name="cities_data_transferred_successfully">اطلاعات شهر ها با موفقیت دریافت شد.</string>
  <string name="message_transferring_cities_data">در حال انتقال اطلاعات شهر ها…</string>
  <string name="message_cities_information_not_found">اطلاعات شهرها یافت نشد. لطفا از قسمت تبادل اطلاعات، اطلاعات لازم
        را دریافت نمایید.
    </string>
  <string name="message_provinces_information_not_foun">اطلاعات استان ها یافت نشد. لطفا از قسمت تبادل اطلاعات، اطلاعات
        لازم را دریافت نمایید.
    </string>
  <string name="message_base_info_transferred_successfully">اطلاعات پایه با موفقیت دریافت شد</string>
  <string name="message_transferring_base_info_data">در حال انتقال اطلاعات پایه..</string>
  <string name="customer_full_name">نام و نام خانوادگی مشتری</string>
  <string name="payment_amount">مبلغ ( ریال )</string>
  <string name="phone_number">شماره تلفن ثابت</string>
  <string name="cell_phone">تلفن همراه</string>
  <string name="address">آدرس</string>
  <string name="location">مکان</string>
  <string name="please_select_province">لطفا استان مورد نظر را انتخاب نمایید</string>
  <string name="please_select_payment_type">نوع پرداخت</string>
  <string name="please_select_city">لطفا شهر مورد نظر را انتخاب نمایید</string>
  <string name="please_select_customer_activity_type">لطفا نوع فعالیت مشتری را انتخاب نمایید</string>
  <string name="please_select_customer_ownership">لطفا نوع مالکیت مشتری را انتخاب نمایید</string>
  <string name="customer_store_surface">متراژ فروشگاه (به متر)</string>
  <string name="get_customer_location">دریافت مکان مشتری بر روی نقشه</string>
  <string name="message_error_in_loading_or_creating_customer">خطا در ایجاد مشتری</string>
  <string name="message_error_in_loading_data">خطا در بارگذاری اطلاعات</string>
  <string name="message_found_location_successfully">مکان مشتری با موفقیت دریافت شد</string>
  <string name="message_finding_location_timeout">برنامه قادر به دریافت مکان مشتری در زمان مناسب نیست.</string>
  <string name="message_customer_name_is_required">وارد کردن نام مشتری اجباری است.</string>
  <string name="message_address_is_required">وارد کردن آدرس مشتری اجباری است.</string>
  <string name="message_customer_save_successfully">مشتری با موفقیت ذخیره شد</string>
  <string name="message_payment_save_successfully">دریافت وجه با موفقیت ذخیره شد</string>
  <string name="create_date_label">تاریخ ایجاد:</string>
  <string name="error_page_txt">در حال حاظر امکان مشاهده این صفحه وجود ندارد</string>
  <string name="no_result">هیچ نتیجه ای یافت نشد</string>
  <string name="send_status_label">وضعیت ارسال:</string>
  <string name="not_sent">ارسال نشده</string>
  <string name="delete_customer">حذف مشتری</string>
  <string name="message_customer_delete_confirm">آیا از حذف مشتری مطمئن هستید؟</string>
  <string name="message_order_delete_confirm">آیا از حذف سفارش مطمئن هستید؟</string>
  <string name="message_payment_delete_confirm">آیا از حذف دریافتی مطمئن هستید؟</string>
  <string name="message_return_delete_confirm">آیا از حذف مرجوعی مطمئن هستید؟</string>
  <string name="message_questionnaire_delete_confirm">آیا از حذف پرسشنامه مطمئن هستید؟</string>
  <string name="yes">بله</string>
  <string name="no">خیر</string>
  <string name="message_customer_deleted_successfully">مشتری با موفقیت حذف شد.</string>
  <string name="message_no_item_found">هیچ آیتمی یافت نشد</string>
  <string name="new_customers_data_transferred_successfully">اطلاعات مشتریان جدید با موفقیت ارسال شد</string>
  <string name="updated_customers_data_transferred_successfully">موقعیت مکانی جدید مشتریان با موفقیت ارسال شد</string>
  <string name="payments_data_transferred_successfully">ارسال موفق: %1$s - ارسال ناموفق:%2$s</string>
  <string name="sending_new_customers_data">در حال ارسال اطلاعات مشتریان جدید …</string>
  <string name="sending_updated_customers_data">در حال ارسال مکان مشتریان …</string>
  <string name="sending_payments_data">در حال ارسال وجوه دریافتی …</string>
  <string name="sending_positions_data">در حال ارسال اطلاعات موقعیت یاب …</string>
  <string name="message_no_new_customer_found">هیچ مشتری جدیدی یافت نشد.</string>
  <string name="message_found_no_new_customer_for_send">هیچ مشتری جدیدی برای ارسال یافت نشد.</string>
  <string name="message_found_no_updated_customer_for_send">هیچ آدرس جدیدی برای ارسال یافت نشد.</string>
  <string name="message_got_no_response">هیچ پاسخی از سرور دریافت نشد.</string>
  <string name="message_exception_in_sending_new_customers">خطا در ارسال مشتریان</string>
  <string name="message_required_setting_for_data_transfer_not_found">تنظیمات لازم برای انتقال اطلاعات یافت نشد. لطفا
        به قسمت تنظیمات مراجعه فرمایید.
    </string>
  <string name="message_device_does_not_have_active_internet_connection">دستگاه به اینترنت متصل نیست. لطفا از برقراری
        اینترنت دستگاه اطمینان حاصل نمایید.
    </string>
  <string name="message_finding_location">در حال دریافت مکان مشتری</string>
  <string name="province_caption">استان:</string>
  <string name="payment_type_caption">نوع پرداخت:</string>
  <string name="city_caption">شهر:</string>
  <string name="activity_type_caption">نوع فعالیت:</string>
  <string name="ownership_type_caption">نوع مالکیت:</string>
  <string name="message_transferring_visit_lines_data">در حال انتقال اطلاعات خطوط بازدید…</string>
  <string name="message_exception_in_transferring_visit_lines_data">خطا در انتقال اطلاعات خطوط بازدید</string>
  <string name="message_no_visit_lines_data">هیچ خط بازدیدی دریافت نشد</string>
  <string name="visitlines_data_transferred_successfully">اطلاعات خطوط بازدید با موفقیت دریافت شد.</string>
  <string name="visit_lines">خطوط بازدید</string>
  <string name="message_transferring_questionnaires_data">در حال انتقال اطلاعات پرسشنامه ها</string>
  <string name="message_questionnaires_transferred_successfully">اطلاعات پرسشنامه ها با موفقیت دریافت شد.</string>
  <string name="message_exception_in_transferring_questionnaires">خطا در انتقال اطلاعات پرسشنامه ها</string>
  <string name="message_no_goods_group_transferred">هیچ گروه کالایی دریافت نشد.</string>
  <string name="message_exception_in_transferring_goods_groups">خطا در انتقال اطلاعات گروه های کالا</string>
  <string name="message_goods_groups_transferred_successfully">اطلاعات گروه های کالا با موفقیت منتقل شد</string>
  <string name="message_transferring_goods_group_data">در حال انتقال اطلاعات گروه های کالا …</string>
  <string name="message_no_goods_transferred">هیچ کالایی دریافت نشد.</string>
  <string name="login">ورود</string>
  <string name="shop_name">نام فروشگاه</string>
  <string name="national_code">کد ملی</string>
  <string name="municipality_code">منطقه شهرداری</string>
  <string name="postal_code">کد پستی</string>
  <string name="sort_by">مرتب سازی بر اساس</string>
  <string name="not_visited">عدم ویزیت</string>
  <string name="do_filter">اعمال</string>
  <string name="remove_filter">حذف فیلتر ها</string>
  <string name="close">بستن</string>
  <string name="filters">فیلتر ها</string>
  <string name="distance_less_than">فاصله : کمتر از</string>
  <string name="meter">متر</string>
  <string name="register_no">ثبت عدم</string>
  <string name="register_order">ثبت سفارش</string>
  <string name="customer_code_asc">کد مشتری (صعودی)</string>
  <string name="customer_code_desc">کد مشتری (نزولی)</string>
  <string name="full_name_asc">نام و نام خانوادگی (الف-ی)</string>
  <string name="full_name_desc">نام و نام خانوادگی(ی-الف)</string>
  <string name="login_info">ورود اطلاعات</string>
</resources>