<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:background="@android:color/white"
  android:orientation="vertical">

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:layout_marginBottom="31dp"
    android:layout_marginRight="24dp"
    android:layout_gravity="top"
    android:gravity="right"
    android:text="@string/sort_by"
    android:textColor="@color/black_85"
    android:textSize="@dimen/text_large" />

  <RadioGroup
    android:id="@+id/sort_radio_group"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginRight="24dp"
    android:layoutDirection="rtl">

    <RadioButton
      android:id="@+id/customer_code_asc"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="31dp"
      android:paddingRight="24dp"
      android:checked="true"
      android:gravity="right|center"
      android:tag="0"
      android:text="@string/customer_code_asc"
      android:textColor="@color/black_85"
      android:textSize="14sp" />

    <RadioButton
      android:id="@+id/customer_code_desc"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="31dp"
      android:paddingRight="24dp"
      android:gravity="right|center"
      android:tag="1"
      android:text="@string/customer_code_desc"
      android:textColor="@color/black_85"
      android:textSize="14sp" />

    <RadioButton
      android:id="@+id/full_name_asc"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="31dp"
      android:paddingRight="24dp"
      android:gravity="right|center"
      android:tag="2"
      android:text="@string/full_name_asc"
      android:textColor="@color/black_85"
      android:textSize="14sp" />

    <RadioButton
      android:id="@+id/full_name_desc"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="31dp"
      android:paddingRight="24dp"
      android:gravity="right|center"
      android:tag="3"
      android:text="@string/full_name_desc"
      android:textColor="@color/black_85"
      android:textSize="14sp" />
  </RadioGroup>

</LinearLayout>