<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/customer_lay"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:layout_marginTop="8dp"
  android:layout_marginStart="8dp"
  android:layout_marginEnd="8dp"
  android:layout_marginLeft="8dp"
  android:layout_marginRight="8dp"
  android:background="@color/white">

  <TextView
    android:id="@+id/title_tv"
    style="@style/IranSans.Medium"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:layout_marginBottom="20dp"
    android:layout_marginRight="20dp"
    android:layout_alignParentRight="true"
    android:layout_alignParentTop="true"
    android:text="@string/filters"
    android:textColor="@color/black_de"
    android:textSize="18sp" />

  <View
    android:id="@+id/devider_top"
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:layout_below="@id/title_tv"
    android:background="@color/navigation_drawer_divider" />

  <ImageView
    android:id="@+id/radar_icon"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="18dp"
    android:layout_marginBottom="18dp"
    android:layout_marginLeft="18dp"
    android:layout_marginRight="22dp"
    android:layout_alignParentRight="true"
    android:layout_below="@id/devider_top"
    android:src="@drawable/ic_radar_black_24dp"
    android:tint="@color/login_gray" />

  <TextView
    android:id="@+id/pre_tv"
    style="@style/IranSans.Medium"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="21dp"
    android:layout_marginLeft="4dp"
    android:layout_below="@id/devider_top"
    android:layout_toLeftOf="@id/radar_icon"
    android:text="@string/distance_less_than"
    android:textColor="@color/black_de"
    android:textSize="14sp" />

  <EditText
    android:id="@+id/distance_edt"
    style="@style/IranSans.Medium"
    android:layout_width="52dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="18dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_below="@id/devider_top"
    android:layout_toLeftOf="@id/pre_tv"
    android:paddingBottom="4dp"
    android:paddingRight="8dp"
    android:background="@drawable/edit_text_line"
    android:gravity="right"
    android:hint="500"
    android:inputType="number"
    android:textColorHint="@color/black_8a"
    android:textSize="14sp" />

  <TextView
    style="@style/IranSans.Medium"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="21dp"
    android:layout_marginLeft="4dp"
    android:layout_below="@id/devider_top"
    android:layout_toLeftOf="@id/distance_edt"
    android:text="@string/meter"
    android:textColor="@color/black_de"
    android:textSize="14sp" />

  <View
    android:id="@+id/devider_middle"
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_below="@id/radar_icon"
    android:background="@color/navigation_drawer_divider" />


  <CheckBox
    android:id="@+id/filter_none_cb"
    style="@style/IranSans"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="23dp"
    android:layout_marginRight="22dp"
    android:layout_below="@id/devider_middle"
    android:button="@null"
    android:drawablePadding="24dp"
    android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
    android:gravity="right|center"
    android:text="@string/register_no"
    android:textColor="@color/black_85"
    android:textSize="14sp" />

  <CheckBox
    android:id="@+id/filter_order_cb"
    style="@style/IranSans"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    android:layout_marginRight="22dp"
    android:layout_below="@id/filter_none_cb"
    android:button="@null"
    android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
    android:drawablePadding="24dp"
    android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
    android:gravity="right|center"
    android:text="@string/register_order"
    android:textColor="@color/black_85"
    android:textSize="14sp" />

  <CheckBox
    android:id="@+id/filter_not_visited_cb"
    style="@style/IranSans"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="23dp"
    android:layout_marginBottom="23dp"
    android:layout_marginRight="22dp"
    android:layout_below="@id/filter_order_cb"
    android:button="@null"
    android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
    android:drawablePadding="24dp"
    android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
    android:gravity="right|center"
    android:text="@string/not_visited"
    android:textColor="@color/black_85"
    android:textSize="14sp" />

  <TextView
    android:id="@+id/error_msg"
    style="@style/IranSans"
    android:textStyle="bold"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:layout_alignRight="@+id/filter_not_visited_cb"
    android:layout_below="@id/filter_not_visited_cb"
    android:gravity="right"
    android:textColor="@color/red"
    android:textSize="14sp"
    android:visibility="gone"
    tools:text="فاصله نمی تواند بیش از ۵۰۰ متر باشد" />

  <View
    android:id="@+id/devider_bottom"
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:layout_below="@id/error_msg"
    android:background="@color/navigation_drawer_divider" />

  <TextView
    android:id="@+id/close_tv"
    style="@style/IranSans.Medium"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="21dp"
    android:layout_marginLeft="28dp"
    android:layout_alignParentLeft="true"
    android:layout_below="@id/devider_bottom"
    android:text="@string/close"
    android:textColor="@color/primary"
    android:textSize="14sp" />

  <Button
    android:id="@+id/do_filter_btn"
    style="@style/IranSans.Medium"
    android:layout_width="80dp"
    android:layout_height="30dp"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="16dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="16dp"
    android:layout_alignParentRight="true"
    android:layout_below="@id/devider_bottom"
    android:background="@drawable/get_data_background"
    android:gravity="center"
    android:text="@string/do_filter"
    android:textColor="@color/white"
    android:textSize="14sp" />

  <Button
    android:id="@+id/remove_filter_btn"
    style="@style/IranSans.Medium"
    android:layout_width="109dp"
    android:layout_height="30dp"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="16dp"
    android:layout_below="@id/devider_bottom"
    android:layout_toLeftOf="@id/do_filter_btn"
    android:background="@drawable/send_data_background"
    android:gravity="center"
    android:text="@string/remove_filter"
    android:textColor="@color/primary"
    android:textSize="14sp" />
</RelativeLayout>